2022-09-06T00:34:44Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2996779650
* notice: last 14d: unq all: 37 5247
* notice: prev accum: outdated-unq outdated-all / unq all: 949 56571 / 1032 61765
* notice: next accum: outdated-unq outdated-all / unq all: 957 56944 / 1039 62191
* notice: prev exec diff / last date diff / accum: unq all: +0 +126 -0 -14 / +1 +360 -0 -0 / 1 360
* notice: removed / changed dates: [2022-08-22] / [2022-08-23 2022-09-05]

2022-09-05T16:06:27Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2994674701
* notice: last 14d: unq all: 37 5194
* notice: prev accum: outdated-unq outdated-all / unq all: 949 56571 / 1039 61794
* notice: next accum: outdated-unq outdated-all / unq all: 949 56571 / 1032 61765
* notice: prev exec diff / last date diff / accum: unq all: +0 +111 -7 -140 / +1 +234 -0 -0 / 1 234
* notice: removed / changed dates: [] / [2022-08-22 2022-09-05]

2022-09-05T08:07:57Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2991664073
* notice: last 14d: unq all: 39 5223
* notice: prev accum: outdated-unq outdated-all / unq all: 949 56571 / 1038 61823
* notice: next accum: outdated-unq outdated-all / unq all: 949 56571 / 1039 61794
* notice: prev exec diff / last date diff / accum: unq all: +1 +125 -0 -154 / +1 +123 -0 -0 / 1 123
* notice: removed / changed dates: [] / [2022-08-22 2022-09-04 2022-09-05]

2022-09-05T00:38:10Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2990135721
* notice: last 14d: unq all: 39 5252
* notice: prev accum: outdated-unq outdated-all / unq all: 932 56143 / 1027 61346
* notice: next accum: outdated-unq outdated-all / unq all: 949 56571 / 1038 61823
* notice: prev exec diff / last date diff / accum: unq all: +0 +135 -0 -20 / +1 +373 -0 -0 / 1 373