@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-06T00:34:44Z",
-  "count" : 354,
+  "timestamp" : "2022-09-06T08:08:58Z",
+  "count" : 190,
   "count_minmax" : [ 120, 368 ],
-  "count_decinc" : [ -14, +368 ],
-  "uniques" : 7,
+  "count_decinc" : [ -178, +368 ],
+  "uniques" : 4,
   "uniques_minmax" : [ 2, 7 ],
-  "uniques_decinc" : [ -0, +7 ]
+  "uniques_decinc" : [ -3, +7 ]
 }
