@@ -1,8 +1,8 @@
 {
   "timestamp" : "2022-09-06T08:08:58Z",
-  "count" : 362,
-  "count_minmax" : [ 123, 362 ],
-  "count_decinc" : [ -0, +362 ],
+  "count" : 111,
+  "count_minmax" : [ 111, 111 ],
+  "count_decinc" : [ -0, +111 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
