@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-09-06T00:34:44Z",
+  "timestamp" : "2022-09-06T08:08:58Z",
   "count_outdated" : 56944,
   "uniques_outdated" : 957,
-  "count" : 62191,
-  "uniques" : 1039,
+  "count" : 62140,
+  "uniques" : 1037,
   "clones" : [
     {
       "timestamp": "2022-08-23T00:00:00Z",
-      "count": 354,
+      "count": 190,
       "count_minmax": [ 120, 368 ],
-      "uniques": 7,
+      "uniques": 4,
       "uniques_minmax": [ 2, 7 ]
     },
     {
@@ -98,8 +98,15 @@
     },
     {
       "timestamp": "2022-09-05T00:00:00Z",
-      "count": 360,
-      "count_minmax": [ 123, 360 ],
+      "count": 362,
+      "count_minmax": [ 123, 362 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-06T00:00:00Z",
+      "count": 111,
+      "count_minmax": [ 111, 111 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
