@@ -1,11 +1,11 @@
 {
-  "count": 5247,
-  "uniques": 37,
+  "count": 5196,
+  "uniques": 35,
   "clones": [
     {
       "timestamp": "2022-08-23T00:00:00Z",
-      "count": 354,
-      "uniques": 7
+      "count": 190,
+      "uniques": 4
     },
     {
       "timestamp": "2022-08-24T00:00:00Z",
@@ -69,7 +69,12 @@
     },
     {
       "timestamp": "2022-09-05T00:00:00Z",
-      "count": 360,
+      "count": 362,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-06T00:00:00Z",
+      "count": 111,
       "uniques": 1
     }
   ]
