@@ -1,3 +1,11 @@
+2022-09-06T08:08:58Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2998516010
+* notice: last 14d: unq all: 35 5196
+* notice: prev accum: outdated-unq outdated-all / unq all: 957 56944 / 1039 62191
+* notice: next accum: outdated-unq outdated-all / unq all: 957 56944 / 1037 62140
+* notice: prev exec diff / last date diff / accum: unq all: +1 +113 -3 -164 / +1 +111 -0 -0 / 1 111
+* notice: removed / changed dates: [] / [2022-08-23 2022-09-05 2022-09-06]
+
 2022-09-06T00:34:44Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2996779650
 * notice: last 14d: unq all: 37 5247
